# app

./: README.md  index.android.js  index.js  package.json
android/: build.gradle  local.properties
android/app/: build.gradle
android/app/src/main/java/com/app/: AppBridge.java  AppPackage.java  MainApplication.java
rust/.cargo/: config
rust/app/: Cargo.toml  Makefile  copy_android.sh
rust/app/src/: lib.rs
scripts/: cargo-config.toml.template  create_ndk.sh  setup.sh
